test/libsolidity/syntaxTests/parsing/mapping_nonelementary_key_4.sol
contract c {
	mapping(string[] => uint) data;
}
// ----
// ParserError: (28-29): Expected '=>' but got '['
// ParserError: (28-29): Expected type name
